--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,7 @@ dist: trusty
 language: java
 jdk: openjdk8
 install: true
-script:
-    - ./mvnw clean verify
-    - ./mvnw spring-boot:run
+script: ./mvnw clean verify
 cache:
   directories:
   - $HOME/.m2
