--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ before_install:
 #  - sudo /etc/init.d/mysql stop
 #  - sudo /etc/init.d/postgresql stop
 install:
-  -  install
 script:
+  -  ./mvn clean install
 notifications:
   webhooks:
     on_success: change  # options: [always|never|change] default: always
