--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
 #  - sudo /etc/init.d/postgresql stop
 install:
 script:
-  -  ./mvn clean install
+  -  mvn clean install
 notifications:
   webhooks:
     on_success: change  # options: [always|never|change] default: always
