--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_install:
   - sudo apt-get install -y openjdk-8-jdk
   - sudo update-java-alternatives -s java-1.8.0-openjdk-amd64
   - java -version
-  - sudo apt-get install maven=3.1.0
+  - sudo apt-get install maven
   - mvn -version
 #  - sudo /etc/init.d/mysql stop
 #  - sudo /etc/init.d/postgresql stop
