--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ services:
 language: node_js
 node_js:
   - "12.13.0"
-cache:
-  directories:
-    - node
-    - node_modules
+#cache:
+#  directories:
+#    - node
+#    - node_modules
 env:
   global:
     - NODE_VERSION=12.13.1
