--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,11 @@ services:
   - docker
 language: node_js
 node_js:
-  - "12.13.0"
-#cache:
-#  directories:
-#    - node
-#    - node_modules
+  - "12.13.1"
+cache:
+  directories:
+    - node
+    - node_modules
 env:
   global:
     - NODE_VERSION=12.13.1
@@ -17,6 +17,7 @@ env:
     - SPRING_JPA_SHOW_SQL=false
     - JHI_DISABLE_WEBPACK_LOGS=true
     - NG_CLI_ANALYTICS="false"
+    - SPRING_PROFILES_ACTIVE=prod,swagger
 before_install:
   - sudo add-apt-repository -y ppa:openjdk-r/ppa
   - sudo apt-get update
