--- a/.travis.yml
+++ b/.travis.yml
@@ -1,36 +1,39 @@
-dist: trusty
 os:
   - linux
 services:
   - docker
 language: node_js
 node_js:
-  - "12.13.0"
+  - "10.16.3"
 cache:
   directories:
     - node
     - node_modules
 env:
   global:
-    - NODE_VERSION=12.13.0
+    - NODE_VERSION=10.16.3
     - SPRING_OUTPUT_ANSI_ENABLED=ALWAYS
     - SPRING_JPA_SHOW_SQL=false
     - JHI_DISABLE_WEBPACK_LOGS=true
     - NG_CLI_ANALYTICS="false"
-    - SPRING_PROFILES_ACTIVE=prod,swagger
 before_install:
-  - sudo add-apt-repository -y ppa:openjdk-r/ppa
-  - sudo apt-get update
-  - sudo apt-get install -y openjdk-8-jdk
-  - sudo update-java-alternatives -s java-1.8.0-openjdk-amd64
+  -
+    if [[ $JHI_JDK = '8' ]]; then
+      echo '*** Using OpenJDK 8'
+    else
+      echo '*** Using OpenJDK 11 by default'
+      sudo add-apt-repository ppa:openjdk-r/ppa
+      sudo apt-get update
+      sudo apt-get install -y openjdk-11-jdk
+      sudo update-java-alternatives -s java-1.11.0-openjdk-amd64
+      java -version
+    fi
   - java -version
-  - sudo apt-get install maven
-  - mvn -version
 #  - sudo /etc/init.d/mysql stop
 #  - sudo /etc/init.d/postgresql stop
-install: true
+install:
+  -  install
 script:
-  -  sudo mvn clean install
 notifications:
   webhooks:
     on_success: change  # options: [always|never|change] default: always
