--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,10 +2,13 @@ spring:
   profiles:
     active: prod
 
-    datasource:
-        url: jdbc:mysql://localhost:3306/spring_social?useSSL=false
-        username: root
-        password: callicoder
+  data:
+    mongodb:
+      uri: mongodb+srv://khairy:123rezgui@cluster0-iayke.mongodb.net/shareloc?retryWrites=true&w=majority
+    #    datasource:
+    #        url: jdbc:mysql://localhost:3306/spring_social?useSSL=false
+    #        username: root
+    #        password: callicoder
 
     jpa:
         show-sql: true
