--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,7 @@
 spring:
-  profiles:
-    active: dev
-
   data:
     mongodb:
-      uri: mongodb+srv://khairy:123rezgui@cluster0-iayke.mongodb.net/test?retryWrites=true&w=majority
+      uri: mongodb+srv://khairy:123rezgui@cluster0-iayke.mongodb.net/shareloc?retryWrites=true&w=majority
   #    datasource:
   #        url: jdbc:mysql://localhost:3306/spring_social?useSSL=false
   #        username: root
